[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
bytemuck = { version = "1.23.1", features = ["derive"] }
env_logger = "0.11.8"
glam = { version = "0.30.5", features = ["bytemuck", "rand"] }
image = "0.25.6"
log = "0.4.27"
noise = "0.9.0"
pollster = "0.4.0"
rand = "0.9.2"
rayon = "1.10.0"
wgpu = "26.0.1"
winit = "0.30.12"
